Incorporate ComputedStyle::hasTransform when diffing transform styles.

BUG=695125
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2767783003
Cr-Commit-Position: refs/heads/master@{#458907}

Former-commit-id: 463b2dfe64df899fda4359f2d360ee1cba46e26b